Loremtext added in paragraph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
   <h1>Hello everybodyallihopa!</h1>
-  <p>This is amazing!</p> 
+  <p>This is amazing! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Et magnam quod odio? Mollitia ad fugiat ipsa rem reiciendis autem quos, at temporibus, fugit modi eveniet odio? Fugiat rem harum saepe?</p> 
 </body>
 </html>
